# zatzou-wynnbot

./: .gitignore  Cargo.toml  README.md  example_config.toml  item_list.json  update.sh
resources/: item_list.json
src/: cache.rs  config.rs  error.rs  help.rs  helpers.rs  main.rs  wynn.rs
src/commands/: gather.rs  help.rs  id.rs  map.rs  mod.rs  owner.rs  up.rs
