[package]
name = "zatzoubot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serenity = { version = "0.10.9", features = ["cache", "framework", "standard_framework", "rustls_backend", "gateway", "unstable_discord_api"] }

config = { version = "0.11", default-features = false, features = ["toml"] }

reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
cached = "0.26.2"
once_cell = "1.8"

chrono = "0.4"

tracing = "0.1.23"
tracing-subscriber = "0.3"

image = { version = "0.23", default-features = false, features = ["png"] }
imageproc = "0.22"
rusttype = "0.9.2"
colorsys = "0.6"
crc32fast = "1.2"
hex = "0.4"
webp = "0.2"
